<resources>
    <string name="app_name">wheelpieDemo</string>
    <string name="title_activity_line_chart">LineChart</string>
    <string name="ExerciseModelContent">ClassName+Date</string>
    <string name="ExerciseContent">RunningType</string>
    <string name="ExerciseTime">時間</string>
    <string name="ExerciseTimeContent">00:00:00</string>
    <string name="HeartRate">心率</string>
    <string name="Distance">距離</string>
    <string name="Speed">速度</string>
    <string name="Calories">卡路里</string>
    <string name="HeartRateContent">00</string>
    <string name="DistanceContent">00</string>
    <string name="SpeedContent">00</string>
    <string name="CaloriesContent">00</string>
    <string name="startbutton">TODO</string>
    <string name="spotifybutton">spotifybutton</string>
    <string name="youtubebutton">youtubebutton</string>
    <string name="monitoring">monitoring</string>
    <string name="ExerciseType">訓練類型</string>
    <string name="ExerciseMode">訓練模式</string>

    <string name="course_start_training">開始訓練</string>

    <!--<string name="facebook_app_id">251368738980489</string> <string name="fb_login_protocol_scheme">fb251368738980489</string>-->
    <string name="facebook_app_id">349387872208649</string>
    <string name="fb_login_protocol_scheme">fb349387872208649</string>

    <string name="preference_file_key">org.iii.wheelpiedemo.PREFERENCE_FILE_KEY</string>

    <string name="menu_free">自由訓練</string>
    <string name="menu_training">智慧訓練</string>
    <string name="menu_evaluation">體能評測</string>
    <string name="menu_course">打造課程</string>
    <string name="menu_other">更多功能</string>
    <string name="menu_setting">個人設定</string>
    <string name="menu_dashboard">資訊看板</string>
    <string name="menu_assistant">課後助理</string>
</resources>
