<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/menu_free"
        android:id="@+id/main_free"
        android:icon="@drawable/ic_accessibility_white_24dp"
        android:orderInCategory="1"/>
    <item
        android:title="@string/menu_training"
        android:id="@+id/main_training"
        android:icon="@drawable/ic_directions_run_white_24dp"
        android:orderInCategory="2"/>
    <item
        android:title="@string/menu_evaluation"
        android:id="@+id/main_evaluation"
        android:icon="@drawable/ic_assignment_turned_in_white_24dp"
        android:orderInCategory="3"/>
    <item
        android:title="@string/menu_course"
        android:id="@+id/main_course"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:orderInCategory="4"/>
    <item
        android:title="@string/menu_other"
        android:id="@+id/main_other"
        android:icon="@drawable/ic_more_horiz_white_24dp"
        android:orderInCategory="5"/>
</menu>
